// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emit_wasm > assign to param 1`] = `
(module
  (type (;0;) (func (param i32) (result i32)))
  (func (;0;) (type 0) (param i32) (result i32)
    i32.const 0
    local.set 0
    local.get 0))
`;

exports[`emit_wasm > block > block with last 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    i32.const 0
    drop
    i32.const 0
    drop
    i32.const 0))
`;

exports[`emit_wasm > block > empty block 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    i32.const 0))
`;

exports[`emit_wasm > constant func 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    i32.const 0))
`;

exports[`emit_wasm > define 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    (local i32)
    i32.const 0
    local.set 0
    local.get 0))
`;

exports[`emit_wasm > empty module 1`] = `(module)`;

exports[`emit_wasm > identity func 1`] = `
(module
  (type (;0;) (func (param i32) (result i32)))
  (func (;0;) (type 0) (param i32) (result i32)
    local.get 0))
`;

exports[`emit_wasm > if 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    i32.const 0
    if (result i32)  ;; label = @1
      i32.const 0
    else
      i32.const 0
    end))
`;

exports[`emit_wasm > return 1`] = `
(module
  (type (;0;) (func (result i32)))
  (func (;0;) (type 0) (result i32)
    i32.const 0
    return))
`;
